swagger without errorValidation
