# product-api/handlers/post.go
@@ -12,7 +12,6 @@ import (
 //
 // responses:
 //	200: productResponse
-//  422: errorValidation
 //  501: errorResponse
 
 // Create handles POST Request
